# sigma-api

./: .deepsource.toml  .dockerignore  .example.env  .gitignore  .gitmodules  Cargo.toml  README.md  docker-compose.altapi.yml  docker-compose.dev.yml  docker-compose.yml
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: dependent-issues.yml  docker-publish.yml  rust.yml
api-utils/: Cargo.toml
api-utils/src/: api_response.rs
mongo/: init-mongo.js
pjatk-api/: Cargo.toml  Dockerfile  debug.Dockerfile
pjatk-api/src/: config.rs  main.rs
pjatk-schedule/: Cargo.toml  Dockerfile  debug.Dockerfile
pjatk-schedule/src/: api.rs  auth.rs  config.rs  main.rs  scraper.rs
pjatk-scrapper/: Cargo.toml  Dockerfile  debug.Dockerfile
pjatk-scrapper/src/: api.rs  config.rs  event_loop.rs  main.rs  scraper.rs
pjatk-scrapper/src/loops/: mod.rs  parser_loop.rs  receiver_loop.rs  sender_loop.rs
pjatk-scrapper/src/request/: base_validation.rs  date_request.rs  entry_request.rs  mod.rs
timetable/: Cargo.toml
timetable/src/: altapi_timetable.rs  mod.rs  timetable.rs
