[package]
name = "api-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "./src/api_response.rs"
[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
mongodb = "2.3.0"
poem = { version = "1.3.43" }
poem-openapi = { version = "2.0.13", features = ["redoc", "chrono"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
