[package]
name = "api-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "./src/api_response.rs"
[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.89"
mongodb = "2.3.1"
poem = { version = "1.3.50" }
poem-openapi = { version = "2.0.20", features = ["redoc", "chrono"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
