[package]
name = "pjatk-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.17.0", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "time",
    "rt",
    "parking_lot",
] }
parking_lot = { version = "0.12.0", features = ["nightly"] }
kuchiki = "0.8.1"
# mimalloc = "0.1.28"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
mongodb = "2.2.0"
poem = { version = "1.3.29", features = ["tower-compat"] }
poem-openapi = { version = "1.3.29", features = ["redoc", "chrono"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
tower = { version = "0.4.12", features = ["limit"] }
timetable = { path = "../timetable" }
api-utils = { path = "../api-utils" }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
# wither="0.9.0"
