[package]
name = "pjatk-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.21.2", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "time",
    "rt",
    "parking_lot",
] }
parking_lot = { version = "0.12.1", features = ["nightly"] }
kuchiki = "0.8.1"
# mimalloc = "0.1.28"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
mongodb = "2.3.1"
poem = { version = "1.3.47", features = ["tower-compat"] }
poem-openapi = { version = "2.0.16", features = ["redoc", "chrono"] }
chrono = { version = "0.4.22", features = ["serde"] }
futures = "0.3.25"
tower = { version = "0.4.13", features = ["limit"] }
timetable = { path = "../timetable" }
api-utils = { path = "../api-utils" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
# wither="0.9.0"
