[package]
name = "pjatk-schedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = { version = "0.29.6", default-features = false, features = [
    "rusttls-tls",
] }
tokio = { version = "1.20.1", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "time",
    "rt",
    "parking_lot",
] }
parking_lot = { version = "0.12.1", features = ["nightly"] }
kuchiki = "0.8.1"
# mimalloc = "0.1.28"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
mongodb = "2.3.0"
poem = { version = "1.3.33", features = ["tower-compat"] }
poem-openapi = { version = "2.0.5", features = ["swagger-ui", "chrono"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
timetable = { path = "../timetable" }
api-utils = { path = "../api-utils" }
tower = { version = "0.4.13", features = ["limit"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
# wither = "0.9.0"
