[package]
name = "pjatk-scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = { version = "0.28.1", default-features = false, features = [
    "tokio-runtime",
    "reqwest-rustls-tls-webpki-roots",
] }
tokio = { version = "1.17.0", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "time",
    "rt",
    "parking_lot",
] }
tokio-tungstenite = "0.17.1"
parking_lot = { version = "0.12.0", features = ["nightly"] }
kuchiki = "0.8.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
timetable = { path = "../timetable" }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
