[package]
name = "pjatk-scrapper"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1.17.0",features=["full"]}
kuchiki="0.8.1"
regex="1.5.5"
lazy_static="1.4.0"
tokio-tungstenite= "0.17.1"
reqwest= {version="0.11.10", features = ["rustls-tls","multipart","stream","cookies"]}
crossbeam="0.8.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
timetable = { path = "../timetable" }
tracing = "0.1.32"
tracing-subscriber = {version="0.3.9",features = ["env-filter"]}
