[package]
name = "timetable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "./src/mod.rs"

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
kuchiki = "0.8.1"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.91"
poem = "1.3.50"
poem-openapi = "2.0.20"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = { version = "0.8.1", features = ["serde"] }
bson = { version = "2.4.0", features = ["chrono-0_4"] }
# wither="0.9.0"
